--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
               </div>
             </div>
-
+            <div id="billing-address"> <div class="form-group"> <label for="new-street">Street</label> <input type="text" class="form-control new-street"> </div>  <div class="form-group"> <label for="new-city">City</label> <input type="text" class="form-control new-city"> </div> <div class="form-group"> <label for="new-state">State</label> <input type="text" class="form-control new-state"> </div> </div>
             <span class="btn btn-primary" id="add-address">Add Billing Address</span> <!--end new-address-->
 
             <div id="submit">
